Add Android sdk hard coded property

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,10 @@
     <packaging>apk</packaging>
     <name>my-android-application</name>
 
+    <properties>
+        <sdk.path>/home/ubuntu/android-sdk-linux/</sdk.path>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.google.android</groupId>
