Put sdk.platform into property

--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
                     <resourceDirectory>${project.basedir}/res</resourceDirectory>
                     <nativeLibrariesDirectory>${project.basedir}/src/main/native</nativeLibrariesDirectory>
                     <sdk>
-                        <platform>23</platform>
+                        <platform>${sdk.platform}</platform>
                     </sdk>
                                         <deleteConflictingFiles>true</deleteConflictingFiles>
                     <undeployBeforeDeploy>true</undeployBeforeDeploy>
